# ERPGuard

./: README.md  compliance_summary.py  docker-compose.yml  docker-entrypoint-initdb.sql  pyproject.toml  render.yaml  requirements.txt  sample.env
dashboard/: app.py
database/: connection.py
erpguard/: compliance_summary.py
erpguard/dashboard/: app.py
erpguard/database/: connection.py  init_db.py  loader.py
erpguard/docs/: ERPGuard_OnePager.md  compliance_rules_matrix.csv
erpguard/reporting/: generate_report.py
erpguard/validation/: rules_engine.py
erpguard/validation/rules/: full_compliance_rules.json
reporting/: generate_report.py
samples/: equipment.csv  items_master.csv  items_master_columns.csv  suppliers.csv  suppliers_columns.csv
